# backend/internal/controller/router.go
@@ -38,6 +38,8 @@ func SetupRouter(app *Application) *gin.Engine {
 		public.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 		public.GET("/places/:id/reviews", app.GetReviews)
 
+		public.GET("/places/public", app.ListPublicPlaces)
+
 		public.GET("/leaderboard/users", app.GetUserLeaderboard)
 		public.GET("/leaderboard/places", app.GetPlaceLeaderboard)
 		public.GET("/leaderboard/bonuses", app.GetBonusLeaderboard)
@@ -55,6 +57,8 @@ func SetupRouter(app *Application) *gin.Engine {
 
 		protected.POST("/places", app.CreatePlace)
 		protected.GET("/places", app.GetPlaces)
+
+		protected.POST("/places/ensure_from_public", app.EnsurePlaceFromPublic)
 
 		protected.POST("/reviews", app.SubmitReview)
 		protected.PATCH("/reviews/:id", app.UpdateReview)
